simplify loadProductCatalog func